terraform/build-ami/vpc.tf
resource "aws_vpc" "build_vpc" {
  cidr_block           = "10.2.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name   = "build-ami-vpc"
    run_id = var.run_id
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.build_vpc.id
  cidr_block              = "10.2.1.0/24"
  availability_zone       = data.aws_availability_zones.available.names[0]
  map_public_ip_on_launch = true

  tags = {
    Name   = "build-ami-public-subnet"
    run_id = var.run_id
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.build_vpc.id

  tags = {
    Name   = "build-ami-igw"
    run_id = var.run_id
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.build_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name   = "build-ami-public-rt"
    run_id = var.run_id
  }
}

resource "aws_route_table_association" "public_rta" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
